Improved popup newsletter and fixed on mobile

--- a/web/public/src/css/elements/popup.scss
+++ b/web/public/src/css/elements/popup.scss
@@ -19,6 +19,7 @@ $popupBorderRadius: 20px;
     display: block;
     position: absolute;
 
+    @include transition(300ms);
     @include border-radius(100%);
 
     span {
@@ -29,6 +30,7 @@ $popupBorderRadius: 20px;
       font-weight: 600;
       position: absolute;
       color: rgba(0, 0, 0, 0.7);
+      color: rgba(255,255,255,.35);
       @include translate(-50%, -50%);
     }
   }
@@ -45,56 +47,35 @@ $popupBorderRadius: 20px;
   }
 
   &__wrapper {
-    top: 50%;
-    left: 50%;
     z-index: 10000;
     background: #fff;
-    position: absolute;
-    min-width: 280px;
-    max-width: calc(400px - 2 * #{$popupPadding_mobile});
+    position: relative;
     padding: $popupPadding_mobile;
-    max-height: 100%;
-    overflow-y: scroll;
-
-    @include border-radius($popupBorderRadius);
-    @include translate(-50%, -50%);
-
-    @media all and (min-width: $desktop-screen) {
-      padding: $popupPadding_desktop;
-      max-width: calc(400px - 2 * #{$popupPadding_desktop});
-    }
-
-    .contact_form_input {
-      padding: 17px 0;
-
-      @include border-radius(60px);
-    }
-
-    .subscriptionBoxLarge__text {
-      font-size: 1.1em;
-      line-height: 1.4em;
-      // margin-bottom: 16px;
-    }
-
-    .subscriptionBoxLarge {
-      padding: 0;
-    }
-  }
-
-  &__wrapper {
     top: 50%;
-    left: 50%;
-    z-index: 10000;
-    background: #fff;
-    position: absolute;
-    min-width: 280px;
-    max-width: calc(400px - 2 * #{$popupPadding_mobile});
-    padding: $popupPadding_mobile;
-    max-height: 100%;
+    left: 1em;
+    right: 1em;
+    bottom: 1em;
     overflow-y: scroll;
+    width: calc(100% - 2 * #{$popupPadding_mobile} - 2em);
+    max-height: calc(100% - 2 * #{$popupPadding_mobile} - 2em);
 
-    @include translate(-50%, -50%);
+    @include transition(300ms);
+    @include translate(0, -50%);
     @include border-radius($popupBorderRadius);
+
+    @media all and (min-width: $tablet-screen) {
+      top: 50%;
+      left: 50%;
+      bottom: initial;
+      right: initial;
+      margin: 0;
+      max-height: 100%;
+      min-width: 280px;
+      position: absolute;
+      max-width: calc(400px - 2 * #{$popupPadding_mobile});
+
+      @include translate(-50%, -50%);
+    }
 
     @media all and (min-width: $desktop-screen) {
       padding: $popupPadding_desktop;
@@ -148,16 +129,17 @@ $popupBorderRadius: 20px;
 
     &__title {
       top: 50%;
-      left: 50%;
       margin: 0;
       padding: 0;
+      width: 100%;
       color: #fff;
       font-size: 22px;
       font-weight: 600;
-      position: absolute;
       padding-top: 3px;
+      position: absolute;
+      text-align: center;
 
-      @include translate(-50%, -50%);
+      @include translate(0, -50%);
     }
   }
 }
